--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <ul class="list-group bg-dark">
                         <li class="list-group-item bg-dark">
                             <label for="date">Enter Date</label>
-                            <input type="text" placeholder="1/10/2010" id="datetime" />
+                            <input type="text" placeholder="1/1/2010" id="datetime" />
                         </li>
                         <li class="list-group-item bg-dark">
                             <label for="city">Enter City</label>
@@ -81,6 +81,17 @@
                         <li class="list-group-item bg-dark">
                             <label for="shape">Enter Shape</label>
                             <input type="text" placeholder="Triangle" id="shape" />
+                        </li>
+                        
+                        <li class="list-group" class="btn-dark">
+                            <button id="filter-btn" type="button" class="btn-dark">
+                            Filter Table
+                            </button>
+
+                            <button id="clean-btn" type="button" class="btn-dark">
+                            Clear Table
+                            </button>
+
                         </li>
 
                     </ul>
